# rust-programming-language

async-rust/async-more/rdu/: Cargo.toml  README.md
async-rust/async-more/rdu/src/: lib.rs  main.rs
async-rust/async-rust-internals/: .gitignore  Cargo.toml
async-rust/async-rust-internals/b-stack-show/: Cargo.toml
concepts/: variance.md
ffi/buildintro/: Cargo.toml  README.md  build.rs
ffi/buildintro/src/: main.rs
ffi/normal_syscall/: Cargo.toml
ffi/normal_syscall/src/: main.rs
ffi/raw_syscall/: Cargo.toml
ffi/raw_syscall/src/: main.rs
ffi/simpleffi/: Cargo.toml  README.md  build.rs
ffi/simpleffi/src/: main.rs  math.c
macros/: Cargo.toml
macros/methodical/: Cargo.toml
macros/methodical/src/: main.rs  matching.rs  repetitions.rs
macros/practical/: Cargo.toml
macros/practical/src/: main.rs  vecs.rs
macros/rust_book/: Cargo.toml
macros/rust_book/src/: declarative.rs  main.rs  procedural.rs
py/virtualenv/: create_virtual_env.txt
rust/: rust-cheatsheet.txt
rust-guide/: README.md
rust-guide/logparser/: .gitignore  Cargo.toml
rust-recipes/design-patterns/: Cargo.toml
rust-recipes/design-patterns/src/: visitor.rs
rust-recipes/design-patterns/src/visitor/: visitor-expr.rs
rust-recipes/error-handling/: README.md
rust-recipes/iterators/: README.md
rust/advanced/: Cargo.toml
rust/async-rust/: Cargo.toml  README.md
rust/axum-fun/: Cargo.toml
rust/axum-more/: Cargo.toml
rust/hello/: Cargo.toml
rust/lifetimes_memory/: Cargo.toml
unsafe_rust/mut_static/: Cargo.toml
unsafe_rust/raw_ptrs/: Cargo.toml
(+127 files in other folders)
