[package]
name = "design-patterns"
version = "0.1.0"
authors = ["Binoy Jayan <binoyjayan@gmail.com>"]
edition = "2018"
default-run = "visitor"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "visitor"
path = "src/visitor/visitor.rs"

[[bin]]
name = "visitor-expr"
path = "src/visitor/visitor-expr.rs"

[dependencies]
