[package]
name = "rdu"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
byte-unit = "5.1.6"
clap = { version = "4.5.27", features = ["derive"] }
futures = "0.3.31"
lazy_static = "1.5.0"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["fs"] }
